--- a/main.css
+++ b/main.css
@@ -161,7 +161,9 @@ nav a:hover {
 }
 
 main {
+  display: flex;
   flex: wrap;
+  background-color: #007BFF;
   /* display: grid; */
 }
 
@@ -172,7 +174,7 @@ main {
   width: 100%;
   height: 130px;
   position: relative;
-  top: 1482px;
+  top: 1402px;
   overflow: hidden;
   background-color: #323232;
   flex: wrap;
