--- a/event.css
+++ b/event.css
@@ -14,11 +14,11 @@
 
 body{
   font-family: 'Raleway', sans-serif;
-  background: #747474;
+  /* background: #747474; */
   font-size: 14px;
   flex: wrap;
   width: 100%;
-  color: #fcf9f9;
+  color: #050505;
 }
 
 
@@ -210,7 +210,7 @@ nav a:hover {
 
 
 .current-news-head{
-  background: #747474;
+  background: #2d2d2d;
   padding: 20px;
   font-size: 12px;
   margin: 20px 0;
